objects/Related_Stakeholder_s__c.object
<CustomObject>
    <fields>
        <fullName>BU_Growth_Strategy__c</fullName>
        <label>BU Growth Strategy</label>
        <referenceTo>BU_Growth_Strategy__c</referenceTo>
        <relationshipLabel>Related Stakeholder(s)</relationshipLabel>
        <relationshipName>Related_Stakeholder_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Stakeholder(s)</relationshipLabel>
        <relationshipName>Related_Stakeholder_s</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key_RSH__c</fullName>
        <label>Unique Key RSH</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Stakeholder(s)</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Related Stakeholder(s) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Stakeholder(s)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>